Bug 478465.  Don't clobber our NS_FRAME_IN_REFLOW flag by scrolling.  r+sr=roc