layout/generic/nsGfxScrollFrame.h
@@ -229,6 +229,9 @@ public:
   PRPackedBool mVerticalOverflow:1;
   PRPackedBool mPostedReflowCallback:1;
   PRPackedBool mMayHaveDirtyFixedChildren:1;
+  // If true, need to actually update our scrollbar attributes in the
+  // reflow callback.
+  PRPackedBool mUpdateScrollbarAttributes:1;
 };
 
 /**
